# MagicLib

./: .gitignore  error_url
bd_crawler/: multi.py
data/: hmhco.json  scholastic.json
fetch/: hmhco.py  scholastic.py  usborne.py
getimg/: hmhco_img.py  scho_usborne_img.py
magic_spider/: main.py  scrapy.cfg
magic_spider/magic/: dupefilter.py  items.py  middlewares.py  pipelines.py  scheduler.py  settings.py
magic_spider/magic/downloadermiddlewares/: useragent.py
magic_spider/magic/spiders/: bd_spider.py  hmhco.py  jd_spider.py  scholastic.py  usborne.py
output/: age_0_15000.py  errorlist0-4999.txt  errorlist10000-14999.txt  errorlist5000-9999.txt  successlist0-4999.txt  successlist10000-14999.txt  successlist5000-9999.txt
oxbuild_bow_bk/: CMakeLists.txt
oxbuild_bow_bk/demo/: cnndb.cpp  cnnquery.cpp  cnnvoc.cpp  query.cpp  surfdb.cpp
oxbuild_bow_bk/include/DBoW2/: DBoW2.h  FCNN256.h
oxbuild_bow_bk/src/: FCNN256.cpp
oxbuild_bow_bk/vgg/: get_feature.cpp  get_query_features.py  pca.py  pca_model.pkl  run_vgg.py
rollback/: hmhcofromlog.py  schofromlog.py  update_db.py
solver/: cmd.py  parse_hmhco.py  parse_scho.py  parse_usborne.py  usborne.json
tag/: db.py  level_tags.txt  log  shop_category  solve_db.py  tags.txt
tag/clean/: db.py  db_solver.py  log
